--- a/aktivitas2.html
+++ b/aktivitas2.html
@@ -15,7 +15,7 @@
         margin: 0;
         font-family: "Poppins", sans-serif;
         background: linear-gradient(#eef7ff, #eaf6ff);
-        overflow-x: hidden;
+        overflow-x: auto;
         min-height: 100vh;
       }
 
@@ -237,7 +237,7 @@
         display: flex;
         justify-content: center;
         overflow-x: auto;
-        overflow-y: hidden;
+        overflow-y: auto;
         padding-bottom: 20px;
       }
 
@@ -641,7 +641,7 @@
         <span class="close-btn" onclick="closeModal()">&times;</span>
         <h2 id="modalTitle"></h2>
         <p id="modalText"></p>
-      </div>
+      </div
     </div>
 
     <script>
