--- a/aktivitas6.html
+++ b/aktivitas6.html
@@ -15,7 +15,7 @@
         margin: 0;
         font-family: "Poppins", sans-serif;
         background: linear-gradient(#eef7ff, #eaf6ff);
-        overflow-x: hidden;
+        overflow-x: auto;
         min-height: 100vh;
       }
 
@@ -213,7 +213,7 @@
         width: 100%;
         display: flex;
         justify-content: center;
-        overflow: hidden; /* biar tidak ada scroll */
+        overflow: auto; /* biar tidak ada scroll */
       }
 
       .diagram-wrapper {
