--- a/knowledge-base.html
+++ b/knowledge-base.html
@@ -255,7 +255,7 @@
           color: #126e80;
         "
       >
-        Pattern Recognition + Risiko
+        Knowledge Base Aktivitas Terminal Teluk Lamong
       </h2>
 
       <table class="clean-table">
