--- a/aktivitas3.html
+++ b/aktivitas3.html
@@ -289,7 +289,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 5','Data stowage keliru/kurang lengkap saat dipublikasikan (BAPLIE & VGM)')"
+                      onclick="showModal('Risk 5 (Risiko 5)','Data stowage keliru/kurang lengkap saat dipublikasikan (BAPLIE & VGM)')"
                     >
                       R 5
                     </div>
@@ -297,7 +297,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 8','Versi file tidak sinkron (publish BAPLIE lama/terbaru tidak tersebar)')"
+                          onclick="showModal('Cause 8 (Penyebab 8)','Versi file tidak sinkron (publish BAPLIE lama/terbaru tidak tersebar)')"
                         >
                           C 8
                         </div>
@@ -305,7 +305,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('PM 8','Terapkan kontrol versi & acknowledgement EDI (gunakan APERAK/CONTRL) agar hanya versi terbaru yang dipakai.')"
+                              onclick="showModal('Preventive Measure 8 (Tindakan Preventif 8)','Terapkan kontrol versi & acknowledgement EDI (gunakan APERAK/CONTRL) agar hanya versi terbaru yang dipakai.')"
                             >
                               PM 8
                             </div>
@@ -315,7 +315,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 9','Kualitas data buruk: salah bay/row/tier, size/type, atau VGM belum/salah')"
+                          onclick="showModal('Cause 9 (Penyebab 9)','Kualitas data buruk: salah bay/row/tier, size/type, atau VGM belum/salah')"
                         >
                           C 9
                         </div>
@@ -323,7 +323,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('PM 9','Aktifkan rule-based validation (bay/row/tier/type) dan cek VGM sesuai SOLAS-VGM sebelum publish.')"
+                              onclick="showModal('Preventive Measure 9 (Tindakan Preventif 9)','Aktifkan rule-based validation (bay/row/tier/type) dan cek VGM sesuai SOLAS-VGM sebelum publish.')"
                             >
                               PM 9
                             </div>
@@ -336,7 +336,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 6','Interferensi antar quay crane karena CWP tidak optimal')"
+                      onclick="showModal('Risk 6 (Risiko 6)','Interferensi antar quay crane karena CWP tidak optimal')"
                     >
                       R 6
                     </div>
@@ -344,7 +344,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 10','Range kerja crane overlap (aturan non-crossing/jarak aman tidak diterapkan)')"
+                          onclick="showModal('Cause 10 (Penyebab 10)','Range kerja crane overlap (aturan non-crossing/jarak aman tidak diterapkan)')"
                         >
                           C 10
                         </div>
@@ -352,7 +352,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 10','Terapkan penjadwalan QCSP di TOS dengan kendala non-crossing & safety distance + validasi CWP sebelum publish')"
+                              onclick="showModal('Preventive Measure 10 (Tindakan Preventif 10)','Terapkan penjadwalan QCSP di TOS dengan kendala non-crossing & safety distance + validasi CWP sebelum publish')"
                             >
                               PM 10
                             </div>
@@ -386,7 +386,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 6','Data salah/tidak lengkap di TOS (manifest, ukuran/tipe kontainer, VGM, data kapal)')"
+                      onclick="showModal('Risk 6 (Risiko 6)','Data salah/tidak lengkap di TOS (manifest, ukuran/tipe kontainer, VGM, data kapal)')"
                     >
                       R 6
                     </div>
@@ -394,7 +394,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 11','Kesalahan input/manual mapping (ISO size/type, reefer/DG flag, container ID) atau VGM belum masuk saat cut-off')"
+                          onclick="showModal('Cause 11 (Penyebab 11)','Kesalahan input/manual mapping (ISO size/type, reefer/DG flag, container ID) atau VGM belum masuk saat cut-off')"
                         >
                           C 11
                         </div>
@@ -402,7 +402,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('PM 1','Hard-validation di TOS (ISO size/type & DG/reefer wajib benar; VGM wajib ada—kalau tidak, blok rencana)')"
+                              onclick="showModal('Preventive Measure 1 (Tindakan Preventif 1)','Hard-validation di TOS (ISO size/type & DG/reefer wajib benar; VGM wajib ada—kalau tidak, blok rencana)')"
                             >
                               PM 11
                             </div>
@@ -412,7 +412,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 12','Profil kapal (bay/vessel particulars) tidak mutakhir di library TOS sehingga penomoran slot/kapasitas tidak cocok')"
+                          onclick="showModal('Cause 12 (Penyebab 12)','Profil kapal (bay/vessel particulars) tidak mutakhir di library TOS sehingga penomoran slot/kapasitas tidak cocok')"
                         >
                           C 12
                         </div>
@@ -420,7 +420,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('PM 12','Governansi master data kapal (update saat first call & sign-off oleh shipping line; versi dikunci sebelum planning)')"
+                              onclick="showModal('Preventive Measure 12 (Tindakan Preventif 12)','Governansi master data kapal (update saat first call & sign-off oleh shipping line; versi dikunci sebelum planning)')"
                             >
                               PM 12
                             </div>
@@ -433,7 +433,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 7','Bay Plan melanggar aturan keselamatan (stabilitas, batas tumpuk/lashing, dan segregasi Dangerous Goods)')"
+                      onclick="showModal('Risk 7 (Risiko 7)','Bay Plan melanggar aturan keselamatan (stabilitas, batas tumpuk/lashing, dan segregasi Dangerous Goods)')"
                     >
                       R 7
                     </div>
@@ -441,7 +441,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 13','Deklarasi Dangerous Goods/segregation code tidak lengkap/salah, atau reefer/OOG tidak ditandai')"
+                          onclick="showModal('Cause 13 (Penyebab 13)','Deklarasi Dangerous Goods/segregation code tidak lengkap/salah, atau reefer/OOG tidak ditandai')"
                         >
                           C 13
                         </div>
@@ -449,7 +449,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('PM 13','TIMDG rule engine di TOS (tag DG/reefer/OOG wajib; rencana otomatis block jika tidak sesuai segregasi)')"
+                              onclick="showModal('Preventive Measure 13 (Tindakan Preventif 13)','TIMDG rule engine di TOS (tag DG/reefer/OOG wajib; rencana otomatis block jika tidak sesuai segregasi)')"
                             >
                               PM 13
                             </div>
@@ -459,7 +459,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 14','Batasan stabilitas/trim/GM dari Chief Officer tidak diterapkan dalam rule TOS saat menyusun rencana')"
+                          onclick="showModal('Cause 14 (Penyebab 14)','Batasan stabilitas/trim/GM dari Chief Officer tidak diterapkan dalam rule TOS saat menyusun rencana')"
                         >
                           C 14
                         </div>
@@ -467,7 +467,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('PM 14','Wajib loadicator check & CO approval sebelum rilis Bay Plan/CWP (rencana tidak bisa dieksekusi sebelum lolos)')"
+                              onclick="showModal('Preventive Measure 14 (Tindakan Preventif 14)','Wajib loadicator check & CO approval sebelum rilis Bay Plan/CWP (rencana tidak bisa dieksekusi sebelum lolos)')"
                             >
                               PM 14
                             </div>
