--- a/aktivitas6.html
+++ b/aktivitas6.html
@@ -289,7 +289,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 11','Instruksi/dispatch tidak jelas jadi salah ambil/salah taruh.')"
+                      onclick="showModal('Risk 11 (Risiko 11)','Instruksi/dispatch tidak jelas jadi salah ambil/salah taruh.')"
                     >
                       R 11
                     </div>
@@ -297,7 +297,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 18','Kualitas radio buruk/crosstalk sehingga pesan terpotong atau tertukar.')"
+                          onclick="showModal('Cause 18 (Penyebab 18)','Kualitas radio buruk/crosstalk sehingga pesan terpotong atau tertukar.')"
                         >
                           C 18
                         </div>
@@ -305,7 +305,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 18','Audit & peremajaan perangkat radio + kanal khusus operasi; siapkan fallback ke hand-signals standar bila kualitas audio tidak memadai.')"
+                              onclick="showModal('Preventive Measure 18 (tindakan Preventif 18)','Audit & peremajaan perangkat radio + kanal khusus operasi; siapkan fallback ke hand-signals standar bila kualitas audio tidak memadai.')"
                             >
                               PM 18
                             </div>
@@ -319,7 +319,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 12','Dispatch tidak sinkron dengan rencana yard & arus truk/gate.')"
+                      onclick="showModal('Risk 12 (Risiko 12)','Dispatch tidak sinkron dengan rencana yard & arus truk/gate.')"
                     >
                       R 12
                     </div>
@@ -327,7 +327,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 19','Perubahan TAS/ETA truk tidak tersosialisasi ke dispatcher & operator.')"
+                          onclick="showModal('Cause 19 (Penyebab 19)','Perubahan TAS/ETA truk tidak tersosialisasi ke dispatcher & operator.')"
                         >
                           C 19
                         </div>
@@ -335,7 +335,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 19','Gunakan Truck Appointment System terintegrasi TOS (time-window, load-balancing) dengan notifikasi perubahan otomatis.')"
+                              onclick="showModal('Preventive Measure 19 (Tindakan Preventif 19)','Gunakan Truck Appointment System terintegrasi TOS (time-window, load-balancing) dengan notifikasi perubahan otomatis.')"
                             >
                               PM 19
                             </div>
@@ -371,7 +371,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 11','Salah hold/release sehingga kontainer yang masih “ditahan” (Customs/Karantina/DG) terlepas atau sebaliknya.')"
+                      onclick="showModal('Risk 11 (Risiko 11)','Salah hold/release sehingga kontainer yang masih “ditahan” (Customs/Karantina/DG) terlepas atau sebaliknya.')"
                     >
                       R 11
                     </div>
@@ -380,7 +380,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 22','Status kepabeanan/karantina tidak tersinkron antara INSW/BC–TOS (SPPB, pemeriksaan fisik, red/yellow lane).')"
+                          onclick="showModal('Cause 22 (Penyebab 22)','Status kepabeanan/karantina tidak tersinkron antara INSW/BC–TOS (SPPB, pemeriksaan fisik, red/yellow lane).')"
                         >
                           C 22
                         </div>
@@ -388,7 +388,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 22','Integrasi API INSW–TOS dengan aturan auto-hold sampai SPPB tervalidasi di sistem.')"
+                              onclick="showModal('Preventive Measure 22 (Tindakan Preventif 22)','Integrasi API INSW–TOS dengan aturan auto-hold sampai SPPB tervalidasi di sistem.')"
                             >
                               PM 22
                             </div>
@@ -400,7 +400,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 23','Mapping identitas kontainer keliru (nomor box/B/L mismatch, salah scan STID/RFID).')"
+                          onclick="showModal('Cause 23 (Penyebab 23)','Mapping identitas kontainer keliru (nomor box/B/L mismatch, salah scan STID/RFID).')"
                         >
                           C 23
                         </div>
@@ -408,7 +408,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 23','Wajib double-scan (gate & yard) + verifikasi otomatis nomor box↔B/L di TOS sebelum rilis.')"
+                              onclick="showModal('Preventive Measure 23 (Tindakan Preventif 23)','Wajib double-scan (gate & yard) + verifikasi otomatis nomor box↔B/L di TOS sebelum rilis.')"
                             >
                               PM 23
                             </div>
@@ -422,7 +422,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 12','Lonjakan kemacetan karena bulk release atau last-minute hold → yard padat & truck turn time melonjak.')"
+                      onclick="showModal('Risk 12 (Risiko 12)','Lonjakan kemacetan karena bulk release atau last-minute hold → yard padat & truck turn time melonjak.')"
                     >
                       R 12
                     </div>
@@ -431,7 +431,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 24','Last-minute hold dari regulator/pelayaran (audit, dokumen kurang) saat volume sudah siap keluar.')"
+                          onclick="showModal('Cause 24 (Penyebab 24)','Last-minute hold dari regulator/pelayaran (audit, dokumen kurang) saat volume sudah siap keluar.')"
                         >
                           C 24
                         </div>
@@ -439,7 +439,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 24','Tetapkan pre-release cut-off (H-24/H-6) + checklist clearance; setelah cut-off perubahan wajib approval.')"
+                              onclick="showModal('Preventive Measure 24 (Tindakan Preventif 24)','Tetapkan pre-release cut-off (H-24/H-6) + checklist clearance; setelah cut-off perubahan wajib approval.')"
                             >
                               PM 24
                             </div>
