--- a/aktivitas1.html
+++ b/aktivitas1.html
@@ -289,7 +289,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 1','Ketidakakuratan jadwal & posisi sandar (Berth mis-allocation)')"
+                      onclick="showModal('Risk 1 (Risiko 1)','Ketidakakuratan jadwal & posisi sandar (Berth mis-allocation)')"
                     >
                       R 1
                     </div>
@@ -305,7 +305,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 1','Terapkan Just-in-Time (JIT) Port Call: kewajiban update ETA/ETD berkala via Inaportnet dan berbagi memakai data standar IMO FAL.5/Circ.52, terhubung ke VTS/pandu.')"
+                              onclick="showModal('Preventive Measure 1 (Tindakan Preventif 1)','Terapkan Just-in-Time (JIT) Port Call: kewajiban update ETA/ETD berkala via Inaportnet dan berbagi memakai data standar IMO FAL.5/Circ.52, terhubung ke VTS/pandu.')"
                             >
                               PM 1
                             </div>
@@ -318,7 +318,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 2','Ketidaksesuaian alokasi crane & kapasitas fasilitas')"
+                      onclick="showModal('Risk 2 (Risiko 2)','Ketidaksesuaian alokasi crane & kapasitas fasilitas')"
                     >
                       R 2
                     </div>
@@ -334,7 +334,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 2','Integrasikan CMMS + condition monitoring (acu ISO 12482) ke TOS agar status alat (operational/out-of-service) real-time; lengkapi fitur keselamatan minimum (anemometer, tie-down, anti-collision) untuk mengurangi downtime karena cuaca/gangguan..')"
+                              onclick="showModal('Preventive Measure 2 (Tindakan Preventif 2)','Integrasikan CMMS + condition monitoring (acu ISO 12482) ke TOS agar status alat (operational/out-of-service) real-time; lengkapi fitur keselamatan minimum (anemometer, tie-down, anti-collision) untuk mengurangi downtime karena cuaca/gangguan..')"
                             >
                               PM 2
                             </div>
@@ -368,7 +368,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 1','Konflik jadwal/berth conflict (double-booking)')"
+                      onclick="showModal('Risk 1 (Risiko 1)','Konflik jadwal/berth conflict (double-booking)')"
                     >
                       R 1
                     </div>
@@ -384,7 +384,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 1','Aktifkan sinkronisasi otomatis + alert deviasi ETA/ETB (≥15–30 menit) antara TOS/BA Map–Inaportnet–shipping line')"
+                              onclick="showModal('Preventive Measure 1 (Tindakan Preventif 1)','Aktifkan sinkronisasi otomatis + alert deviasi ETA/ETB (≥15–30 menit) antara TOS/BA Map–Inaportnet–shipping line')"
                             >
                               PM 1
                             </div>
@@ -402,7 +402,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 2','Tambahkan buffer time antar kapal berbasis histori produktivitas/tidal window pada penetapan window sandar.')"
+                              onclick="showModal('Preventive Measure 2 (Tindakan Preventif 2)','Tambahkan buffer time antar kapal berbasis histori produktivitas/tidal window pada penetapan window sandar.')"
                             >
                               PM 2
                             </div>
@@ -415,7 +415,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 2','Ketidakcocokan kapal–dermaga')"
+                      onclick="showModal('Risk 2 (Risiko 2)','Ketidakcocokan kapal–dermaga')"
                     >
                       R 2
                     </div>
@@ -431,7 +431,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 3','Wajibkan pre-berthing ship particulars checklist H-24/H-12 dan aktifkan “hard-validation” di TOS (LOA/beam/draft/kebutuhan crane harus valid sebelum alokasi diproses)')"
+                              onclick="showModal('Preventive Measure 3 (Tindakan Preventif 3)','Wajibkan pre-berthing ship particulars checklist H-24/H-12 dan aktifkan “hard-validation” di TOS (LOA/beam/draft/kebutuhan crane harus valid sebelum alokasi diproses)')"
                             >
                               PM 3
                             </div>
