--- a/aktivitas5.html
+++ b/aktivitas5.html
@@ -290,7 +290,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 9','RInstruksi/komunikasi tidak jelas (radio/isyarat tangan).')"
+                      onclick="showModal('Risk 9 (Risiko 9)','RInstruksi/komunikasi tidak jelas (radio/isyarat tangan).')"
                     >
                       R 9
                     </div>
@@ -298,7 +298,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 16','Kualitas radio buruk/crosstalk atau noise sehingga pesan terpotong/tertukar.')"
+                          onclick="showModal('Cause 16 (Penyebab 16)','Kualitas radio buruk/crosstalk atau noise sehingga pesan terpotong/tertukar.')"
                         >
                           C 16
                         </div>
@@ -306,7 +306,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 16','Audit & peremajaan radio, kanal khusus operasi, dan fallback ke hand-signals standar bila audio tidak andal.')"
+                              onclick="showModal('Preventive Measure 16 (Tindakan Preventif 16)','Audit & peremajaan radio, kanal khusus operasi, dan fallback ke hand-signals standar bila audio tidak andal.')"
                             >
                               PM 16
                             </div>
@@ -320,7 +320,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 10','Tidak sinkron dengan CWP/Bay Plan terbaru (versi salah).')"
+                      onclick="showModal('Risk 10 (Risiko 10)','Tidak sinkron dengan CWP/Bay Plan terbaru (versi salah).')"
                     >
                       R 10
                     </div>
@@ -328,7 +328,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 17','Rencana terbaru tidak dipublikasikan ke semua pihak/perangkat (pakai file lama).')"
+                          onclick="showModal('Cause 17 (Penyebab 17)','Rencana terbaru tidak dipublikasikan ke semua pihak/perangkat (pakai file lama).')"
                         >
                           C 17
                         </div>
@@ -336,7 +336,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 17','Terapkan PCS/TOS sebagai “single source of truth” + kontrol versi & notifikasi otomatis saat ada revisi rencana.')"
+                              onclick="showModal('Preventive Measure 17 (Tindakan Preventif 17)','Terapkan PCS/TOS sebagai “single source of truth” + kontrol versi & notifikasi otomatis saat ada revisi rencana.')"
                             >
                               PM 17
                             </div>
@@ -372,7 +372,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 9','Gagal komunikasi radio atau miskom (radio mati/salah kanal/tidak cukup unit).')"
+                      onclick="showModal('Risk 9 (Risiko 9)','Gagal komunikasi radio atau miskom (radio mati/salah kanal/tidak cukup unit).')"
                     >
                       R 9
                     </div>
@@ -380,7 +380,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 19','Gangguan cakupan & kebisingan: dead spot di area kerja, headset/noise-cancelling tidak digunakan.')"
+                          onclick="showModal('Cause 19 (Penyebab 19)','Gangguan cakupan & kebisingan: dead spot di area kerja, headset/noise-cancelling tidak digunakan.')"
                         >
                           C 19
                         </div>
@@ -388,7 +388,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 19','Petakan cakupan & pasang repeater di area dead spot, sekaligus wajib headset untuk semua peran kritis.')"
+                              onclick="showModal('Preventive Measure 19 (Tindakan Preventif 19)','Petakan cakupan & pasang repeater di area dead spot, sekaligus wajib headset untuk semua peran kritis.')"
                             >
                               PM 19
                             </div>
@@ -402,7 +402,7 @@
                   <li>
                     <div
                       class="node yellow"
-                      onclick="showModal('Risk 10','Rencana kerja yang dibagikan tidak tepat/versinya salah (CWP/PA kadaluarsa) → interferensi crane & waktu tunggu.')"
+                      onclick="showModal('Risk 10 (Risiko 10)','Rencana kerja yang dibagikan tidak tepat/versinya salah (CWP/PA kadaluarsa) → interferensi crane & waktu tunggu.')"
                     >
                       R 10
                     </div>
@@ -412,7 +412,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 20','Perubahan rencana last-minute tidak tersosialisasi (tidak ada cut-off & change control yang jelas).')"
+                          onclick="showModal('Cause 20 (Penyebab 20)','Perubahan rencana last-minute tidak tersosialisasi (tidak ada cut-off & change control yang jelas).')"
                         >
                           C 20
                         </div>
@@ -420,7 +420,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 20','Terapkan cut-off & change control terpusat di TOS; revisi hanya lewat tiket yang otomatis broadcast.')"
+                              onclick="showModal('Preventive Measure 20 (Tindakan Preventif 20)','Terapkan cut-off & change control terpusat di TOS; revisi hanya lewat tiket yang otomatis broadcast.')"
                             >
                               PM 20
                             </div>
@@ -432,7 +432,7 @@
                       <li>
                         <div
                           class="node red"
-                          onclick="showModal('Cause 21','Distribusi rencana manual (print/WA) tanpa kontrol versi/timestamp, sehingga tim memakai versi berbeda.')"
+                          onclick="showModal('Cause 21 (Penyebab 21)','Distribusi rencana manual (print/WA) tanpa kontrol versi/timestamp, sehingga tim memakai versi berbeda.')"
                         >
                           C 21
                         </div>
@@ -440,7 +440,7 @@
                           <li>
                             <div
                               class="node green"
-                              onclick="showModal('Preventive Measure 21','Gunakan satu sumber (TOS) dengan timestamp; bagikan tautan versi live, bukan file cetak/WA.')"
+                              onclick="showModal('Preventive Measure 21 (Tindakan Preventif 21)','Gunakan satu sumber (TOS) dengan timestamp; bagikan tautan versi live, bukan file cetak/WA.')"
                             >
                               PM 21
                             </div>
